[gd_scene load_steps=14 format=3 uid="uid://dndfku15kyjsf"]

[ext_resource type="Texture2D" uid="uid://uqv7bvecuj6y" path="res://bottom_menu_bar/assets/add_button.svg" id="1_36oio"]
[ext_resource type="Script" path="res://bottom_menu_bar/bottom_menu_bar.gd" id="1_frnwg"]
[ext_resource type="PackedScene" uid="uid://6mn45h6asdub" path="res://bottom_menu_bar/add_poop_button/add_poop_popup.tscn" id="2_82qwv"]
[ext_resource type="Theme" uid="uid://bb8l8c83dmjmt" path="res://themes/empty.tres" id="2_wb654"]
[ext_resource type="Texture2D" uid="uid://cqjmnlq86mcye" path="res://bottom_menu_bar/assets/calendar_button.svg" id="2_y4xn2"]
[ext_resource type="Theme" uid="uid://0v5t0uvnmwop" path="res://themes/default_theme.tres" id="3_y3bp3"]
[ext_resource type="Texture2D" uid="uid://b1mxdomvxl5p7" path="res://bottom_menu_bar/assets/graph_button.svg" id="4_8gofk"]
[ext_resource type="Texture2D" uid="uid://djd0uqas8p3we" path="res://global_assets/map.svg" id="4_lvolg"]
[ext_resource type="Texture2D" uid="uid://d2y6uoo50vir" path="res://bottom_menu_bar/assets/friends-svgrepo-com.svg" id="6_h1bon"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_mrtjo"]

[sub_resource type="Gradient" id="Gradient_xebkf"]
offsets = PackedFloat32Array(0.891192, 1)
colors = PackedColorArray(0.0823529, 0.0823529, 0.0823529, 1, 0.082, 0.082, 0.082, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_ywjjo"]
gradient = SubResource("Gradient_xebkf")
fill_from = Vector2(1, 1)

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_bt8dq"]
texture = SubResource("GradientTexture2D_ywjjo")

[node name="BottomMenuBar" type="PanelContainer"]
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -180.0
grow_horizontal = 2
grow_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxEmpty_mrtjo")
script = ExtResource("1_frnwg")
add_poop_popup = ExtResource("2_82qwv")

[node name="Background" type="Control" parent="."]
layout_mode = 2

[node name="ColorRect" type="Panel" parent="Background"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
theme_override_styles/panel = SubResource("StyleBoxTexture_bt8dq")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
custom_minimum_size = Vector2(0, 180)
layout_mode = 2

[node name="OtherButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_wb654")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/OtherButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -40

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/OtherButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 50
theme_override_constants/margin_top = 50
theme_override_constants/margin_right = 50
theme_override_constants/margin_bottom = 50

[node name="AddEntryButton2" type="TextureRect" parent="MarginContainer/HBoxContainer/OtherButton/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_lvolg")
expand_mode = 1
stretch_mode = 5

[node name="Label" type="Label" parent="MarginContainer/HBoxContainer/OtherButton/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_y3bp3")
theme_override_font_sizes/font_size = 24
text = "CARTE"
horizontal_alignment = 1

[node name="CalendarButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_wb654")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/CalendarButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -40

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/CalendarButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="AddEntryButton2" type="TextureRect" parent="MarginContainer/HBoxContainer/CalendarButton/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("2_y4xn2")
expand_mode = 1
stretch_mode = 5

[node name="Label2" type="Label" parent="MarginContainer/HBoxContainer/CalendarButton/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_y3bp3")
theme_override_font_sizes/font_size = 24
text = "CALENDRIER"
horizontal_alignment = 1

[node name="AddEntryButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_wb654")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/AddEntryButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -40

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/AddEntryButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="TextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer/AddEntryButton/VBoxContainer/MarginContainer"]
self_modulate = Color(0.380392, 0.196078, 0.0784314, 1)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("1_36oio")
expand_mode = 1
stretch_mode = 5

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/AddEntryButton/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_y3bp3")
theme_override_font_sizes/font_size = 24
text = "NOUVEAU
"
horizontal_alignment = 1

[node name="GraphsButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_wb654")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/GraphsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -40

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/GraphsButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="AddEntryButton2" type="TextureRect" parent="MarginContainer/HBoxContainer/GraphsButton/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("4_8gofk")
expand_mode = 1
stretch_mode = 5

[node name="Label3" type="Label" parent="MarginContainer/HBoxContainer/GraphsButton/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_y3bp3")
theme_override_font_sizes/font_size = 24
text = "GRAPHS"
horizontal_alignment = 1

[node name="ContactsButton" type="Button" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme = ExtResource("2_wb654")

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer/ContactsButton"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = -40

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/ContactsButton/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_left = 40
theme_override_constants/margin_top = 40
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 40

[node name="AddEntryButton2" type="TextureRect" parent="MarginContainer/HBoxContainer/ContactsButton/VBoxContainer/MarginContainer"]
layout_mode = 2
size_flags_horizontal = 3
texture = ExtResource("6_h1bon")
expand_mode = 1
stretch_mode = 5

[node name="Label4" type="Label" parent="MarginContainer/HBoxContainer/ContactsButton/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_y3bp3")
theme_override_font_sizes/font_size = 24
text = "AMIS"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 0
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20

[node name="Separator" type="ColorRect" parent="MarginContainer2"]
custom_minimum_size = Vector2(0, 4)
layout_mode = 2
color = Color(0.160784, 0.160784, 0.160784, 1)

[connection signal="pressed" from="MarginContainer/HBoxContainer/CalendarButton" to="." method="_on_calendar_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/AddEntryButton" to="." method="_on_add_entry_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/GraphsButton" to="." method="_on_graphs_button_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/ContactsButton" to="." method="_on_contacts_button_pressed"]
